# tree-sitter-lambda

./: Cargo.toml  binding.gyp  example  flake.nix  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  main.rs  node-types.json  parser.c
