[package]
name = "tree-sitter-lambda"
description = "lambda grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "lambda"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-lambda"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"
tree-sitter-traversal = "~0.1.2"
rpds = "~0.13.0"

[build-dependencies]
cc = "1.0"
